refactor: improve GlobalExceptionHandler with Builder pattern and better organization